# fast-api

./: .gitignore  pyproject.toml
fast_api/: Dockerfile  main.py
fast_api/app/: background_tasks.py  dependencies.py  main.py
fast_api/app/models/: item.py
fast_api/app/routers/: items.py  notifications.py
tests/: test_main.py
