[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Felipe Baz <fbazmitsuishi@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
